# optimen

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
etc/: optimen.conf
gui/: .gitignore  local.properties
gui/app/: build.gradle  proguard-rules.pro
gui/app/src/androidTest/java/com/example/yura/optimen/: ApplicationTest.java
gui/app/src/main/: AndroidManifest.xml
gui/app/src/main/java/com/example/yura/optimen/: Optimen.java  Settings.java  command_processor.java  config_reader.java  dir_data.java  optimen_list.java  os_helper.java
gui/app/src/main/res/layout/: listview_layout.xml  optimen.xml  settings.xml
gui/app/src/main/res/menu/: optimen.xml
gui/app/src/main/res/values/: colors.xml  strings.xml
gui/gradle/wrapper/: gradle-wrapper.properties
include/: config.h  libev.h  log.h  optimen.h  tbuf.h
scripts/: install.sh  optimen  optimen-wrap
src/: config.c  libev.c  log.c  main.c  optimen.c  tbuf.c
test/: config.c  download_file.py  main.c  mock.c  mock.h  optimen.c  stress_test.py  tbuf.c  unit.h
test/etc/: file_read_test.data  optimen.conf  optimen.conf.dups  optimen.conf.empty.values  optimen.conf.incorrect.values  optimen.conf.spaces.comments
